# ZVAgent

./: .gitignore  README.md  app.py  config-template.json  config.py  pyproject.toml  requirements-optional.txt  run.sh
.github/workflows/: deploy-image-arm.yml  deploy-image.yml
agent/chat/: session_service.py
agent/knowledge/: entity_extractor.py  graph.py  service.py
agent/memory/: __init__.py  config.py  conversation_store.py  layered.py  manager.py  service.py  summarizer.py
agent/prompt/: builder.py  workspace.py
agent/protocol/: agent.py
agent/reports/: renderer.py  research.py  service.py  store.py
agent/skills/: __init__.py  formatter.py  frontmatter.py  manager.py  skill_router.py  summary.py  summary_generator.py
agent/tools/: __init__.py  tool_manager.py
agent/training/: __init__.py  skill_selection_collector.py
bridge/: agent_bridge.py  agent_event_handler.py  agent_initializer.py  turn_event_reporter.py
channel/: channel_factory.py  chat_channel.py
channel/qq/: qq_message.py
cli/: __init__.py  cli.py  utils.py
common/: cloud_client.py  const.py  log.py  quota.py  runtime.py  tmp_dir.py  user_identity.py  utils.py
docker/: Dockerfile.latest  docker-compose.yml  entrypoint.sh
docs/: docs.json  project-structure.md
plugins/: plugin_manager.py
scripts/: clean_workspace.ps1  run.ps1
skills/: README.md
tests/: test_layered_memory.py  test_paper_download.py  test_qianfan_provider.py  test_session_title_encoding.py  test_skill_evolution.py  test_skill_summary.py  test_skill_summary_generator.py  test_tts_markdown_cleanup.py
(+264 files in other folders)
