[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zvagent"
version = "2.0.8"
description = "ZVAgent - AI Agent on WeChat and more"
requires-python = ">=3.7"
dependencies = [
    "click>=8.0",
    "requests>=2.28.2",
]

[project.scripts]
zv = "cli.cli:main"

[tool.setuptools.packages.find]
include = ["cli*"]
